# cub3d

./: CMakeLists.txt  Makefile
include/: cub3d.h
libmini/: Makefile  ft_calloc.c  ft_is_big_alpha.c  ft_is_low_alpha.c  ft_isascii.c  ft_isdigit.c  ft_isnotprint.c  ft_isprint.c  ft_itoa.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_split.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c  ft_tolower.c  ft_toupper.c  get_next_line.c  libft.h
maps/: invalid_map.cub  map.cub  map1.cub
minilibx_macos/: CMakeLists.txt
src/: bonus_mini_map.c  check_map.c  cub.c  error.c  key_hook.c  key_hook_to.c  parsing.c  parsing_color.c  parsing_map.c  raycasting_end.c  raycasting_middle.c  raycasting_start.c
texture/: colorstone.xpm  greystone_1.xpm  redbrick.xpm  wood.xpm
